2001-08-01 John R. Jackson (jrj@purdue.edu)

	* client-src/selfcheck.c: Fix typos I introduced into the PC subdir
	  patch.
	* client-src/sendbackup-gnutar.c: Ditto.
	* client-src/sendsize.c: Ditto.

2001-08-01 Marko Injac <marko.injac@mail.insert.si> via John R. Jackson (jrj@purdue.edu)

	* client-src/findpass.c: Allow backup of subdirs of PC shares for
	  amanda-2.4.1beta1 by Greg Shebert amanda-hackers list Tue Feb 1,
	  2000.  Ported to amanda-2.4.2p2 on debian potato by Marko Injac.
	* client-src/findpass.h: Ditto.
	* client-src/selfcheck.c: Ditto.
	* client-src/sendbackup-gnutar.c: Ditto.
	* client-src/sendsize.c: Ditto.
	* docs/SAMBA: Ditto.

2001-08-01 John R. Jackson (jrj@purdue.edu)

	* client-src/sendsize.c: Prefix each debug line with sendsize process
	  information to make picking out the output from a particular estimate
	  run easier when maxdumps > 1.

2001-08-01 John R. Jackson (jrj@purdue.edu)

	* server-src/amcheck.c: Unlink the temp files as soon as they are
	  created so they always go away when amcheck terminates.  Use
	  pipespawn() instead of system() to call the MAILER program.

2001-08-01 John R. Jackson (jrj@purdue.edu)

	* common-src/debug.c: Only rename files that end in ".debug".

2001-08-01 John R. Jackson (jrj@purdue.edu)

	* common-src/pipespawn.c: Show empty pipespawn() args as "".

2001-07-31 John R. Jackson (jrj@purdue.edu)

	* server-src/conffile.h: Add support for tapetype "blocksize" keyword.
	* server-src/conffile.c: Add tapetype "blocksize" keyword.  Use
	  DISK_BLOCK_KB where appropriate instead of TAPE_BLOCK_SIZE.  Disallow
	  negative tape length and tapemark size.
	* client-src/sendbackup.c: Use new STREAM_BUFSIZE constant.  Use -1
	  for new default buffer size flag.
	* common-src/alloc.c: Add new amtable_free() function.  Adjust args
	  to amtable_alloc() to be consistent with amtable_free().
	* common-src/amanda.h: Add new am_round() and am_floor() macros.